--- a/styles/app.css
+++ b/styles/app.css
@@ -71,14 +71,39 @@
 .ba-text-justify {
   text-align: justify; }
 
+.ba-header-top .container {
+  display: flex;
+  justify-content: space-around;
+  color: #fff;
+  background-color: #000; }
+  .ba-header-top .container .user {
+    display: flex;
+    justify-content: space-between; }
+
+.ba-header-main .container {
+  display: flex;
+  align-items: center; }
+
 .ba-menu {
   display: flex;
+  justify-content: space-between;
   align-items: center;
   list-style: none; }
+  .ba-menu__link {
+    color: inherit;
+    text-decoration: none; }
 
-.ba-menu__link {
-  color: inherit;
-  text-decoration: none; }
+.subscribe {
+  color: #6c6c6c;
+  display: flex;
+  justify-content: space-around;
+  background-color: #ededed; }
+  .subscribe .ba-social {
+    display: flex;
+    justify-content: space-between;
+    align-items: center; }
+    .subscribe .ba-social__items {
+      color: inherit; }
 
 .btn {
   background: pink;
