--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,15 +1,30 @@
 .ba-header {
+
 	&-top .container {
 		display: flex;
-		justify-content: space-around;
+		justify-content: space-between;
 		color: #fff;
+	}
+
+	&-top {
 		background-color: #000;
 
-		.user {
+		&-contacts {
+			color: #fff;
+
+			a {
+				color: inherit;
+			}
+		}
+
+		&-user {
 			display: flex;
 			justify-content: space-between;
 		}
+
 	}
+
+
 
 	&-main .container {
 		display: flex;
@@ -33,27 +48,221 @@
 
 
 .subscribe {
+	background-color: #ededed;
 	color: #6c6c6c;
 
-	display: flex;
-	justify-content: space-around;
-	background-color: #ededed;
+}
 
-	.ba-social {
+.subscribe .container {
+	display: flex;
+	justify-content: space-between;
+
+
+}
+
+.ba-social {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+
+	&__items {
+		color: #6c6c6c;
+	}
+}
+
+.goods-wrapper {
+	display: flex;
+	justify-content: space-between;
+	background: #fd926d;
+	margin: 25px auto 0;
+	padding-bottom: 10px;
+	// cursor: pointer;
+}
+
+.card {
+	background-color: #f7f7f7;
+
+	// &-price {}
+}
+
+.ba-brands .container {
+	display: flex;
+	justify-content: space-between;
+}
+
+.ba-footer {
+	background-color: #000;
+
+	& .container {
+		color: #fff;
 		display: flex;
 		justify-content: space-between;
-		align-items: center;
+	}
 
-		&__items {
-			color: inherit;
+}
+
+.cart {
+	display: none;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: #00000050;
+	z-index: 130;
+
+	&-body {
+		position: relative;
+		margin: auto;
+		width: 1024px;
+		min-height: 200px;
+		max-height: 80vh;
+		background-color: #fff;
+		padding: 25px;
+		overflow: auto;
+		border-radius: 3px;
+	}
+
+	&-title {
+		font-size: 28px;
+		color: #4d5f71;
+
+	}
+
+	&-wrapper {
+		display: flex;
+		justify-content: center;
+		flex-wrap: wrap;
+		margin: 25px 0;
+		background-color: #f2f2f2;
+		border: 1px solid #4d5f713f;
+		border-radius: 3px;
+		padding: 20px;
+
+		#cart-empty {
+			font-size: 24px;
+			color: #4d5f71
 		}
+
+	}
+
+	&-head {
+		display: flex;
+		justify-content: space-between;
+
+	}
+
+	&-close {
+		position: absolute;
+		top: 5px;
+		right: 5px;
+		cursor: pointer;
+		height: 25px;
+		width: 25px;
+		background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24'%3E%3Cpath fill='005bff' d='M12 10.587l6.293-6.294a1 1 0 111.414 1.414l-6.293 6.295 6.293 6.294a1 1 0 11-1.414 1.414L12 13.416 5.707 19.71a1 1 0 01-1.414-1.414l6.293-6.294-6.293-6.295a1 1 0 011.414-1.414L12 10.587z'/%3E%3C/svg%3E");
+
+		&:hover {
+			-webkit-transform: scale(1.2);
+			-ms-transform: scale(1.2);
+			transform: scale(1.2);
+		}
+	}
+
+	&-total {
+		font-size: 28px;
+
+		span {
+			color: #077c24;
+		}
+	}
+
+	&-confirm {
+		display: block;
+		margin-left: auto;
+	}
+
+	.goods {
+		display: flex;
+		width: 100%;
+		justify-content: space-between;
+		background-color: #fff;
+		border-radius: 8px;
+		margin-bottom: 10px;
+
+		&-img {
+			max-width: 120px;
+			border-top-left-radius: 8px;
+			border-bottom-left-radius: 8px;
+
+			&-wrapper {
+				flex-basis: 120px;
+			}
+		}
+
+		&-description {
+			padding: 10px;
+			flex-grow: 1;
+		}
+
+		&-title {
+			font-size: 16px;
+		}
+
+		&-price-count {
+			padding-right: 10px;
+		}
+
+		&-trigger {
+			display: flex;
+			justify-content: center;
+		}
+
+		&-add-wishlist {
+			width: 32px;
+			height: 32px;
+			background-color: transparent;
+			// background-image: url(../img/icons.png);
+			background-position: 4px -2589px;
+			border-radius: 50%;
+			text-align: center;
+			line-height: 32px;
+			border: none;
+
+			&.active {
+				background-position: 4px -2633px;
+			}
+		}
+
+		&-delete {
+			width: 32px;
+			height: 32px;
+			background-color: transparent;
+			// background-image: url(../img/icons.png);
+			background-position: 8px -1865px;
+			border-radius: 50%;
+			text-align: center;
+			line-height: 32px;
+			border: none;
+		}
+
+		&-count {
+			display: flex;
+			justify-content: center;
+		}
+
+		&-count-total {
+			width: 32px;
+		}
+
 	}
 }
 
 
 .btn {
+	text-decoration: none;
 	background: $primaryColor;
-	min-width: 100px;
+	color: #fff;
+	// min-width: 100px;
 	padding: 0 1em;
 
 	&:hover {
