--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -4,7 +4,7 @@ $gap: 15px;
 $col: 12;
 $colWidth: 100% / $col;
 
-$primaryColor: pink;
+$primaryColor: #fd926d;
 $secondaryColor: #4e4e4e;
 
 $btnBorderColor: $primaryColor;
