--- a/styles/style.css
+++ b/styles/style.css
@@ -1,89 +1,58 @@
-* {
-  box-sizing: border-box; }
+.ba-header-top {
+  background-color: #000; }
 
-.container {
-  max-width: 1170px;
-  width: 100%;
-  margin: 0 auto;
-  padding: 0 15px; }
-
-/* Ba-grid  */
-.ba-row {
+.ba-header-top .container {
   display: flex;
-  flex-wrap: wrap;
-  margin-left: -15px;
-  margin-right: -15px; }
+  justify-content: space-around;
+  color: #fff; }
+  .ba-header-top .container .user {
+    display: flex;
+    justify-content: space-between; }
 
-.ba-row + .ba-row {
-  margin-top: 1rem; }
-
-[class^='ba-col'] {
-  padding-left: 15px;
-  padding-right: 15px;
-  width: 100%; }
-
-.ba-col-1 {
-  width: 8.33333%; }
-
-.ba-col-2 {
-  width: 16.66667%; }
-
-.ba-col-3 {
-  width: 25%; }
-
-.ba-col-4 {
-  width: 33.33333%; }
-
-.ba-col-5 {
-  width: 41.66667%; }
-
-.ba-col-6 {
-  width: 50%; }
-
-.ba-col-7 {
-  width: 58.33333%; }
-
-.ba-col-8 {
-  width: 66.66667%; }
-
-.ba-col-9 {
-  width: 75%; }
-
-.ba-col-10 {
-  width: 83.33333%; }
-
-.ba-col-11 {
-  width: 91.66667%; }
-
-.ba-col-12 {
-  width: 100%; }
-
-/* ba-common */
-.ba-text-center {
-  text-align: center; }
-
-.ba-text-left {
-  text-align: left; }
-
-.ba-text-right {
-  text-align: right; }
-
-.ba-text-justify {
-  text-align: justify; }
+.ba-header-main .container {
+  display: flex;
+  align-items: center; }
 
 .ba-menu {
   display: flex;
+  justify-content: space-between;
   align-items: center;
   list-style: none; }
+  .ba-menu__link {
+    color: inherit;
+    text-decoration: none; }
 
-.ba-menu__link {
-  color: inherit;
-  text-decoration: none; }
+.subscribe {
+  background-color: #ededed;
+  color: #6c6c6c; }
 
-.btn {
-  background: pink;
-  min-width: 100px;
-  padding: 0 1em; }
-  .btn:hover {
-    background-color: pink;
-    border-color: #ff748c; }
+.subscribe .container {
+  display: flex;
+  justify-content: space-between; }
+  .subscribe .container .ba-social {
+    display: flex;
+    justify-content: space-between;
+    align-items: center; }
+    .subscribe .container .ba-social__items {
+      color: inherit; }
+
+.goods-wrapper {
+  display: flex;
+  justify-content: space-between;
+  background: #fd926d;
+  margin: 25px auto 0;
+  padding-bottom: 10px; }
+
+.card {
+  background-color: #f7f7f7; }
+
+.ba-brands .container {
+  display: flex;
+  justify-content: space-between; }
+
+.ba-footer {
+  background-color: #000; }
+  .ba-footer .container {
+    color: #fff;
+    display: flex;
+    justify-content: space-between; }
