--- a/styles/layout.css
+++ b/styles/layout.css
@@ -72,32 +72,6 @@
   text-align: justify; }
 
 @media screen and (min-width: 768px) {
-  .ba-col-sm-12 {
-    width: 100%; }
-  .ba-col-sm-11 {
-    width: 96.66%; }
-  .ba-col-sm-10 {
-    width: 83.3%; }
-  .ba-col-sm-9 {
-    width: 74.97%; }
-  .ba-col-sm-8 {
-    width: 66.62%; }
-  .ba-col-sm-7 {
-    width: 58.3%; }
-  .ba-col-sm-6 {
-    width: 50%; }
-  .ba-col-sm-5 {
-    width: 41.65%; }
-  .ba-col-sm-4 {
-    width: 33.3%; }
-  .ba-col-sm-3 {
-    width: 24.98%; }
-  .ba-col-sm-2 {
-    width: 16.66%; }
-  .ba-col-sm-1 {
-    width: 8.33%; } }
-
-@media screen and (min-width: 991px) {
   .ba-col-md-12 {
     width: 100%; }
   .ba-col-md-11 {
@@ -125,6 +99,38 @@
   .hidden-md {
     display: none !important; } }
 
-@media screen and (max-width: 991px) {
+@media screen and (min-width: 992px) {
+  .ba-col-lg-12 {
+    width: 100%; }
+  .ba-col-lg-11 {
+    width: 96.66%; }
+  .ba-col-lg-10 {
+    width: 83.3%; }
+  .ba-col-lg-9 {
+    width: 74.97%; }
+  .ba-col-lg-8 {
+    width: 66.62%; }
+  .ba-col-lg-7 {
+    width: 58.3%; }
+  .ba-col-lg-6 {
+    width: 50%; }
+  .ba-col-lg-5 {
+    width: 41.65%; }
+  .ba-col-lg-4 {
+    width: 33.3%; }
+  .ba-col-lg-3 {
+    width: 24.98%; }
+  .ba-col-lg-2 {
+    width: 16.66%; }
+  .ba-col-lg-1 {
+    width: 8.33%; }
+  .hidden-lg {
+    display: none !important; } }
+
+@media screen and (max-width: 576px) {
   .hidden-sm {
+    display: none !important; } }
+
+@media screen and (max-width: 768px) {
+  .hidden-md {
     display: none !important; } }
