--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -73,7 +73,60 @@ $btnBorderColor: $primaryColor;
 .ba-text-justify {
     text-align: justify;
 }
+// больше чем 768px
+@media screen and (min-width: 576px) {
+    .ba-col-sm-12 {
+        width: 100%;
+    }
 
+    .ba-col-sm-11 {
+        width: 96.66%;
+    }
+
+    .ba-col-sm-10 {
+        width: 83.3%;
+    }
+
+    .ba-col-sm-9 {
+        width: 74.97%;
+    }
+
+    .ba-col-sm-8 {
+        width: 66.62%;
+    }
+
+    .ba-col-sm-7 {
+        width: 58.3%;
+    }
+
+    .ba-col-sm-6 {
+        width: 50%;
+    }
+
+    .ba-col-sm-5 {
+        width: 41.65%;
+    }
+
+    .ba-col-sm-4 {
+        width: 33.3%;
+    }
+
+    .ba-col-sm-3 {
+        width: 24.98%;
+    }
+
+    .ba-col-sm-2 {
+        width: 16.66%;
+    }
+
+    .ba-col-sm-1 {
+        width: 8.33%;
+    }
+
+    // .hidden-sm {
+    //     display: none !important;
+    // }
+}
 // больше чем 768px
 @media screen and (min-width: 768px) {
     .ba-col-md-12 {
