--- a/styles/app.css
+++ b/styles/app.css
@@ -153,7 +153,7 @@
   .hidden-lg {
     display: none !important; } }
 
-@media screen and (max-width: 576px) {
+@media screen and (max-width: 575px) {
   .hidden-sm {
     display: none !important; } }
 
@@ -353,7 +353,8 @@
   justify-content: space-between; }
 
 .ba-footer {
-  background-color: #4e4e4e; }
+  background-color: #4e4e4e;
+  display: none; }
   .ba-footer .container {
     color: #fff;
     display: flex;
