--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -21,7 +21,10 @@ $btnBorderColor: $primaryColor;
     margin: 0 auto;
     padding: 0 $gap;
 }
-
+.look-row {
+    display: flex;
+    flex-wrap: wrap;
+}
 /* Ba-grid  */
 .ba-row {
     display: flex;
