--- a/styles/layout.css
+++ b/styles/layout.css
@@ -7,6 +7,10 @@
   margin: 0 auto;
   padding: 0 15px; }
 
+.look-row {
+  display: flex;
+  flex-wrap: wrap; }
+
 /* Ba-grid  */
 .ba-row {
   display: flex;
