--- a/scss/style.scss
+++ b/scss/style.scss
@@ -160,14 +160,18 @@
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: flex-end;
+
 	// width: 100%;
+	& img {
+		width: 90%;
+	}
 
 	&-favorites {
 		position: relative;
 
 		& :hover {
-			transition: .7s;
-			transform: scale(1.2);
+			// transition: .7s;
+			// transform: scale(1.2);
 		}
 
 	}
@@ -176,8 +180,8 @@
 		position: relative;
 
 		& :hover {
-			transition: .7s;
-			transform: scale(1.2);
+			// transition: .7s;
+			// transform: scale(1.2);
 		}
 	}
 
@@ -293,6 +297,7 @@
 	}
 
 	&-body {
+		padding: 1rem;
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
@@ -316,10 +321,10 @@
 	}
 
 	&-add-cart {
-		display: none;
+		// display: none;
 		justify-content: center;
 		align-items: center;
-		opacity: 0;
+		opacity: 1;
 	}
 
 	&:hover {
@@ -351,7 +356,30 @@
 
 
 .ba-baners {
-	display: none;
+	// padding: 0 15px;
+	overflow: hidden;
+
+	&-row {
+		padding: 0;
+		margin: 0;
+	}
+
+	& img {
+		width: 100%;
+	}
+
+	&-left {
+		// padding: 0;
+		// width: 50%;
+	}
+
+	&-right {
+		// padding: 0;
+		// width: 50%;
+		// padding-left: 15px;
+	}
+
+	// display: none;
 }
 
 
@@ -363,7 +391,8 @@
 
 .ba-footer {
 	background-color: $secondaryColor;
-	display: none;
+
+	// display: none;
 	& .container {
 		color: #fff;
 		display: flex;
