--- a/styles/layout.css
+++ b/styles/layout.css
@@ -125,9 +125,7 @@
   .ba-col-md-2 {
     width: 16.66%; }
   .ba-col-md-1 {
-    width: 8.33%; }
-  .hidden-md {
-    display: none !important; } }
+    width: 8.33%; } }
 
 @media screen and (min-width: 992px) {
   .ba-col-lg-12 {
@@ -153,14 +151,4 @@
   .ba-col-lg-2 {
     width: 16.66%; }
   .ba-col-lg-1 {
-    width: 8.33%; }
-  .hidden-lg {
-    display: none !important; } }
-
-@media screen and (max-width: 575px) {
-  .hidden-sm {
-    display: none !important; } }
-
-@media screen and (max-width: 768px) {
-  .hidden-md {
-    display: none !important; } }
+    width: 8.33%; } }
